--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^8.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "swiper": "^6.8.4",
     "web-vitals": "^0.2.4"
